--- a/android/Euro2012/res/layout/itemschedule.xml
+++ b/android/Euro2012/res/layout/itemschedule.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical"
 		android:gravity="center_vertical|center_horizontal">
         <TextView
+            android:id="@+id/txtsday"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:text="08/06"
@@ -20,6 +21,7 @@
             android:textSize="12dip"
             android:layout_weight="1" />
         <TextView
+            android:id="@+id/txtstime"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:text="16:00"
@@ -40,6 +42,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical|center_horizontal" >
 		<TextView
+		    android:id="@+id/txtsteam1"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="Porland"
@@ -48,10 +51,13 @@
             android:gravity="center_vertical|center_horizontal"
             android:textStyle="bold"
             android:textSize="10dip"/>  
-        <ImageView android:layout_width="20dip"
+        <ImageView 
+            android:id="@+id/imgsflag1"
+            android:layout_width="20dip"
             android:layout_height="20dip"
             android:src="@drawable/vietnamflag"/>
 		<TextView
+		    android:id="@+id/txtsratio"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:text="10-10"
@@ -59,10 +65,13 @@
             android:layout_weight="3" 
             android:gravity="center_vertical|center_horizontal"
             android:textSize="10dip"/>
-		<ImageView android:layout_width="20dip"
+		<ImageView 
+		    android:id="@+id/imgsflag2"
+		    android:layout_width="20dip"
             android:layout_height="20dip"
             android:src="@drawable/vietnamflag"/>
 		<TextView
+		    android:id="@+id/txtsteam2"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="Porland"
