--- a/android/Euro2012/res/layout/main.xml
+++ b/android/Euro2012/res/layout/main.xml
@@ -136,8 +136,9 @@
                 <LinearLayout
                     android:id="@+id/llgroupb"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical" >
                 </LinearLayout>
 
                 <LinearLayout
@@ -158,8 +159,9 @@
                 <LinearLayout
                     android:id="@+id/llgroupc"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical">
                 </LinearLayout>
 
                 <LinearLayout
@@ -180,8 +182,9 @@
                 <LinearLayout
                     android:id="@+id/llgroupd"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical">
                 </LinearLayout>
 
                 <LinearLayout
@@ -202,8 +205,9 @@
                 <LinearLayout
                     android:id="@+id/llquarter"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical">
                 </LinearLayout>
 
                 <LinearLayout
@@ -224,8 +228,9 @@
                 <LinearLayout
                     android:id="@+id/llsemi"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical">
                 </LinearLayout>
 
                 <LinearLayout
@@ -246,8 +251,9 @@
                 <LinearLayout
                     android:id="@+id/llfinal"
                     android:layout_width="fill_parent"
-                    android:layout_height="200dip"
-                    android:background="#fff" >
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:orientation="vertical">
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
