--- a/trunk/android/Euro2012/res/layout/itemschedule.xml
+++ b/trunk/android/Euro2012/res/layout/itemschedule.xml
@@ -43,7 +43,7 @@
         android:gravity="center_vertical|center_horizontal" >
 		<TextView
 		    android:id="@+id/txtsteam1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:text="Porland"
             android:textColor="#333333"
@@ -72,7 +72,7 @@
             android:src="@drawable/vietnamflag"/>
 		<TextView
 		    android:id="@+id/txtsteam2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:text="Porland"
             android:textColor="#333333"
