--- a/android/Euro2012/res/layout/news.xml
+++ b/android/Euro2012/res/layout/news.xml
@@ -39,10 +39,12 @@
 	            android:gravity="center_horizontal"
 	            android:orientation="vertical"
 	            android:layout_marginTop="-25dip" >
-	            <ListView android:layout_width="fill_parent" android:layout_height="wrap_content"
+	            <ListView android:layout_width="fill_parent" android:layout_height="fill_parent"
 	                android:id="@+id/lvnews"
 	                android:divider="#FFFFFFFF"
-    				android:dividerHeight="0px"/>
+    				android:dividerHeight="0px"
+    				android:fadingEdge="none"
+    				android:layout_marginBottom="25dip"/>
         	</LinearLayout>
         	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                 android:background="#fff"
