--- a/android/Euro2012/res/layout/teamdetail.xml
+++ b/android/Euro2012/res/layout/teamdetail.xml
@@ -32,15 +32,15 @@
         android:layout_height="fill_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical" 
-        android:padding="10dip">
+        android:layout_margin="10dip" android:background="@drawable/bgwhite">
     	<LinearLayout
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:gravity="center_horizontal"
 	        android:orientation="vertical" 
-	        android:background="@drawable/bgwhitetop">
+	        >
 		<TextView android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
+	            android:layout_height="40dip"
 	            android:text="England"
 	            android:textSize="22dip"
 	            android:textColor="#333"
@@ -50,8 +50,7 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:gravity="center_horizontal"
-	        android:orientation="vertical" 
-	        android:background="#fff">
+	        android:orientation="vertical" >
 	        <TextView android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:text="@string/description"
@@ -112,10 +111,9 @@
 		</LinearLayout>
 		<LinearLayout
 	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
+	        android:layout_height="fill_parent"
 	        android:gravity="center_horizontal"
-	        android:orientation="vertical" 
-	        android:background="@drawable/bgwhitebottom">
+	        android:orientation="vertical">
 			        
 		</LinearLayout>      
 	</LinearLayout>
