--- a/trunk/android/Euro2012/res/layout/teamdetail.xml
+++ b/trunk/android/Euro2012/res/layout/teamdetail.xml
@@ -119,7 +119,7 @@
 	        android:orientation="vertical">
 			<ListView android:layout_width="fill_parent" android:layout_height="fill_parent"
 			    android:fadingEdge="none" android:id="@+id/lvplayers"
-			    android:layout_marginBottom="5dip"/>
+			    android:layout_marginBottom="5dip" android:cacheColorHint="#00000000"/>
 		</LinearLayout>      
 	</LinearLayout>
 </LinearLayout>
