--- a/android/Euro2012/res/layout/itemteamplayers.xml
+++ b/android/Euro2012/res/layout/itemteamplayers.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dip"
+    android:layout_height="40dip" android:background="#9eb399"
     >
     <TextView android:layout_width="0dip" android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:id="@+id/no" android:textColor="#000"/>
+        android:layout_weight="1" android:gravity="center"
+        android:id="@+id/no" android:textColor="#000"
+        android:layout_marginRight="1px" android:background="#fff"
+        />
 	<TextView android:layout_width="0dip" android:layout_height="fill_parent"
-        android:layout_weight="2"
-        android:id="@+id/name" android:textColor="#000"/>
+        android:layout_weight="2" android:gravity="center_vertical"
+        android:id="@+id/name" android:textColor="#000" android:paddingLeft="3dip"
+        android:layout_marginRight="1px" android:background="#fff"/>
 	<TextView android:layout_width="0dip" android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:id="@+id/pos" android:textColor="#000"/>
+        android:layout_weight="1" android:gravity="center"
+        android:id="@+id/pos" android:textColor="#000"
+        android:background="#fff"/>
 </LinearLayout>
