--- a/trunk/android/Euro2012/res/layout/teamdetail.xml
+++ b/trunk/android/Euro2012/res/layout/teamdetail.xml
@@ -40,8 +40,7 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:gravity="center_horizontal"
-	        android:orientation="vertical" 
-	        >
+	        android:orientation="vertical" >
 		<TextView android:layout_width="fill_parent"
 	            android:layout_height="40dip"
 	            android:id="@+id/txtteam"
@@ -119,7 +118,9 @@
 	        android:orientation="vertical">
 			<ListView android:layout_width="fill_parent" android:layout_height="fill_parent"
 			    android:fadingEdge="none" android:id="@+id/lvplayers"
-			    android:layout_marginBottom="5dip" android:cacheColorHint="#00000000"/>
+			    android:layout_marginBottom="5dip" android:cacheColorHint="#00000000"
+			    android:divider="#FFFFFFFF"
+				android:dividerHeight="0px"/>
 		</LinearLayout>      
 	</LinearLayout>
 </LinearLayout>
