--- a/trunk/android/Euro2012/res/layout/teamdetail.xml
+++ b/trunk/android/Euro2012/res/layout/teamdetail.xml
@@ -14,21 +14,20 @@
 
         <Button
             android:id="@+id/btnBack" android:layout_marginTop="3dip"
-            android:layout_width="0dip" android:layout_height="fill_parent"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_marginBottom="5dip"
-            android:layout_weight="1"
+            android:layout_marginLeft="5dip"
             android:background="@drawable/btnback" />
 
         <TextView
-            android:layout_width="0dip"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="2"
             android:gravity="center"
             android:text="@string/teamdetail"
             android:textColor="#fff" android:textStyle="bold"
-            android:textSize="20dip"/>
-        <LinearLayout android:layout_width="0dip" android:layout_height="fill_parent"
-            android:layout_weight="1"/>
+            android:textSize="20dip"
+            android:layout_marginLeft="-70dip"/>
+        
     </LinearLayout>
 	<LinearLayout
         android:layout_width="fill_parent"
