--- a/android/Euro2012/res/layout/teamdetail.xml
+++ b/android/Euro2012/res/layout/teamdetail.xml
@@ -22,12 +22,11 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:gravity="center"
+            android:gravity="center_vertical|center_horizontal"
             android:text="@string/teamdetail"
             android:textColor="#fff" android:textStyle="bold"
             android:textSize="20dip"
             android:layout_marginLeft="-70dip"/>
-        
     </LinearLayout>
 	<LinearLayout
         android:layout_width="fill_parent"
