--- a/android/Euro2012/res/layout/teamdetail.xml
+++ b/android/Euro2012/res/layout/teamdetail.xml
@@ -46,6 +46,8 @@
 	            android:textColor="#333"
 	            android:gravity="center_vertical|center_horizontal"/>			        
 		</LinearLayout>
+		
+    	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<LinearLayout
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
@@ -107,18 +109,14 @@
 		        android:layout_width="fill_parent"
 		        android:layout_height="1px"
 		        android:background="#9eb399"/>
+	    	<LinearLayout
+		        android:layout_width="fill_parent" android:id="@+id/lvplayers"
+		        android:layout_height="fill_parent"
+		        android:gravity="center_horizontal"
+		        android:orientation="vertical"/>
 			        
 		</LinearLayout>
-		<LinearLayout
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:gravity="center_horizontal"
-	        android:orientation="vertical">
-			<ListView android:layout_width="fill_parent" android:layout_height="fill_parent"
-			    android:fadingEdge="none" android:id="@+id/lvplayers"
-			    android:layout_marginBottom="5dip" android:cacheColorHint="#00000000"
-			    android:divider="#FFFFFFFF"
-				android:dividerHeight="0px"/>
-		</LinearLayout>      
+		
+		</ScrollView>
 	</LinearLayout>
 </LinearLayout>
