--- a/trunk/android/Euro2012/res/layout/teamdetail.xml
+++ b/trunk/android/Euro2012/res/layout/teamdetail.xml
@@ -36,15 +36,31 @@
         android:layout_margin="10dip" android:background="@drawable/bgwhite">
     	<LinearLayout
 	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:gravity="center_horizontal"
-	        android:orientation="vertical" >
-		<TextView android:layout_width="fill_parent"
-	            android:layout_height="40dip"
-	            android:id="@+id/txtteam"
-	            android:textSize="22dip"
-	            android:textColor="#333"
-	            android:gravity="center_vertical|center_horizontal"/>			        
+	        android:layout_height="100dip"
+	        android:gravity="center" android:layout_margin="10dip"
+	        android:orientation="horizontal" >
+	        <ImageView android:layout_width="0dip" android:layout_height="fill_parent"
+	            android:id="@+id/imgflag" android:layout_weight="2"
+	            android:src="@drawable/engl"/>
+	        <LinearLayout android:layout_width="0dip" android:layout_height="fill_parent"
+	            android:layout_weight="3" android:orientation="vertical" 
+	            android:layout_marginLeft="10dip">
+	            <TextView android:layout_width="fill_parent"
+		            android:layout_height="wrap_content" android:textStyle="bold"
+		            android:id="@+id/txtteam" android:text="@string/name"
+		            android:textSize="20dip" android:textColor="#333"
+		            android:gravity="center_vertical"/>
+	            <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
+	                android:gravity="center">
+	                <ImageView android:layout_width="0dip" android:layout_height="fill_parent"
+	                    android:id="@+id/imguniform1" android:src="@drawable/esp"
+	                    android:layout_weight="1" android:layout_marginRight="6dip"/>
+	                <ImageView android:layout_width="0dip" android:layout_height="fill_parent"
+	                    android:id="@+id/imguniform2" android:src="@drawable/esp"
+	                    android:layout_weight="1"/>
+	            </LinearLayout>
+	        </LinearLayout>
+						        
 		</LinearLayout>
 		
     	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
